comps/election/ElectionCardGrid.module.css
@media (min-width: 500px) {
  .grid {
    width: 85vw;
    max-width: 1200px;
  }
}

.grid {
  margin: 1rem 0;
}

.itemContainer {
  margin: 0.5rem;
}

.pagination {
  display: flex;
  justify-content: center;
}

.notFoundContainer {
  max-width: 400px;
  text-align: center;
  color: rgba(0, 0, 0, 0.6);
  font-weight: bold;
}

.notFoundImage {
  opacity: 0.8;
  max-width: 300px;
}

